--- a/WebTech-LAB-main/about.html
+++ b/WebTech-LAB-main/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portfolio - Your Name</title>
+    <title>Portfolio | P.G.SINDHU BHARATHI</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -15,15 +15,59 @@
     <style>
         body {
             background-color: #f8f9fa;
+            font-family: 'Segoe UI', sans-serif;
         }
 
         .profile-img {
-            width: 100px;
-            height: 100px;
+            width: 120px;
+            height: 120px;
             object-fit: cover;
             border-radius: 50%;
-            border: 3px solid #0d6efd;
-            margin-bottom: 1rem;
+            border: 4px solid #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        header {
+            position: relative;
+        }
+
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            z-index: 1;
+        }
+
+        .back-button .btn {
+            border-radius: 50%;
+            padding: 0.6rem 1rem;
+        }
+
+        .card img {
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .card:hover {
+            transform: scale(1.02);
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .social-icons a {
+            color: #0d6efd;
+            transition: color 0.3s;
+        }
+
+        .social-icons a:hover {
+            color: #0a58ca;
+        }
+
+        footer {
+            background-color: #0d6efd;
+            color: white;
+            padding: 1rem 0;
+            text-align: center;
+            margin-top: 4rem;
         }
     </style>
 </head>
@@ -31,86 +75,116 @@
 <body>
 
     <header class="bg-primary text-white text-center py-5 mb-5">
-       <div class="text-start mx-5">
-  <button class="btn btn-dark w-5 fs-3 rounded-5" onclick="location.href='home.html'"><</button>
-</div>
+        <div class="back-button">
+            <button class="btn btn-light shadow" onclick="location.href='home.html'" title="Back">
+                <i class="bi bi-arrow-left fs-5"></i>
+            </button>
+        </div>
 
-        <img src="assets/profile.jpg" alt="name" class="profile-img w-10" />
-        <h1 class="fw-bold">P.G.SINDHU BHARATHI</h1>
+        <img src="assets/profile.jpg" alt="P.G.SINDHU BHARATHI" class="profile-img mb-3" />
+        <h1 class="fw-bold">P.G. SINDHU BHARATHI</h1>
         <p class="lead">Web Developer & Designer</p>
     </header>
 
     <main class="container">
         <section class="mb-5">
-            <h2>About Me</h2>
-            <p>
-                Passionate web developer with experience in building responsive, user-friendly websites and
-                applications.
-                Skilled in HTML, CSS, JavaScript, and Bootstrap.
-                Also about a Database Designer.
+            <h2 class="mb-3">About Me</h2>
+            <p class="fs-5">
+                I'm a passionate web developer with expertise in creating responsive and visually engaging websites and
+                web apps.
+                I specialize in <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, and
+                <strong>Bootstrap</strong>.
+                I’m also skilled in database design and integration.
             </p>
         </section>
 
         <section>
-            <h2 class="mb-4">My Projects</h2>
+            <h2 class="mb-4">Projects</h2>
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="card shadow-sm">
-                        <img src="assets/proj1.jpg" class="card-img-top project-img " alt="Project 1" />
+                    <div class="card shadow-sm border-0">
+                        <img src="assets/proj1.jpg" class="card-img-top" alt="Skill Analyser" />
                         <div class="card-body">
                             <h5 class="card-title">Skill Analyser Using MCQ</h5>
-                            <p class="card-text">Using HTML, CSS, Js and Bootstrap</p>
-                            <a href="#" class="btn btn-primary btn-sm" target="_blank">View Project</a>
+                            <p class="card-text">Developed with HTML, CSS, JavaScript, and Bootstrap.</p>
+                            <a href="https://github.com/Sindhu-Bharathi-PG/mcq.git" class="btn btn-outline-primary btn-sm" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="card shadow-sm">
-                        <img src="assets/proj2..jpg" class="card-img-top project-img" alt="Project 2" />
+                    <div class="card shadow-sm border-0">
+                        <img src="assets/proj2..jpg" class="card-img-top" alt="Portfolio Site" />
                         <div class="card-body">
-                            <h5 class="card-title">Project Two</h5>
-                            <p class="card-text">Portfolio site designed with Bootstrap and CSS.</p>
-                            <a href="#" class="btn btn-primary btn-sm" target="_blank">View Project</a>
+                            <h5 class="card-title">E-Commerce Website</h5>
+                            <p class="card-text">E-Commerce website built with modern design.</p>
+                            <a href="#" class="btn btn-outline-primary btn-sm" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="card shadow-sm">
-                        <img src="assets/proj3.png" class="card-img-top project-img" alt="Project 3" />
+                    <div class="card shadow-sm border-0">
+                        <img src="assets/proj3.png" class="card-img-top" alt="Task Manager" />
                         <div class="card-body">
-                            <h5 class="card-title">Project Three</h5>
-                            <p class="card-text">Task manager app using Vue.js and Firebase.</p>
-                            <a href="#" class="btn btn-primary btn-sm" target="_blank">View Project</a>
+                            <h5 class="card-title">Admin Management System</h5>
+                            <p class="card-text">Management System for managing tasks efficiently.</p>
+                            <a href="#" class="btn btn-outline-primary btn-sm" target="_blank">View Project</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row g-4">
+                 <div class="col-md-4">
+                    <div class="card shadow-sm border-0">
+                        <img src="assets/proj3.jpg" class="card-img-top" alt="Task Manager" />
+                        <div class="card-body">
+                            <h5 class="card-title">Ration Card Management System</h5>
+                            <p class="card-text">Management System for easy way to get ration card.</p>
+                            <a href="#" class="btn btn-outline-primary btn-sm" target="_blank">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-md-4">
+                    <div class="card shadow-sm border-0">
+                        <img src="assets/proj4.png" class="card-img-top" alt="Task Manager" />
+                        <div class="card-body">
+                            <h5 class="card-title">Women Safety Application</h5>
+                            <p class="card-text">Application for women safety with SOS.</p>
+                            <a href="#" class="btn btn-outline-primary btn-sm" target="_blank">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-md-4">
+                    <div class="card shadow-sm border-0">
+                        <img src="assets/proj3.jpg" class="card-img-top" alt="Task Manager" />
+                        <div class="card-body">
+                            <h5 class="card-title">Admin Management System</h5>
+                            <p class="card-text">Management System for managing tasks efficiently.</p>
+                            <a href="#" class="btn btn-outline-primary btn-sm" target="_blank">View Project</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
 
         <section class="mt-5 text-center">
             <h2>Contact Me</h2>
-            <p>Feel free to reach out!</p>
-            <div class="fs-4">
-                <a href="mailto:youremail@example.com" class="text-decoration-none me-3" title="Email">
-                    <i class="bi bi-envelope-fill"></i>
-                </a>
-                <a href="https://linkedin.com/in/yourprofile" target="_blank" class="text-decoration-none me-3"
-                    title="LinkedIn">
-                    <i class="bi bi-linkedin"></i>
-                </a>
-                <a href="https://github.com/yourgithub" target="_blank" class="text-decoration-none me-3"
-                    title="GitHub">
-                    <i class="bi bi-github"></i>
-                </a>
-                <a href="https://twitter.com/yourtwitter" target="_blank" class="text-decoration-none" title="Twitter">
-                    <i class="bi bi-twitter"></i>
-                </a>
+            <p class="mb-3">Feel free to connect via email or socials!</p>
+            <div class="fs-4 social-icons">
+                <a href="mailto:bharathisindhu004@gmail.com" class="me-3" title="Email"><i
+                        class="bi bi-envelope-fill"></i></a>
+                <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3" title="LinkedIn"><i
+                        class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/Sindhu-Bharathi-PG" target="_blank" class="me-3" title="GitHub"><i
+                        class="bi bi-github"></i></a>
+             
             </div>
         </section>
     </main>
+
+    
 
     <!-- Bootstrap JS Bundle (with Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -118,3 +192,6 @@
 </body>
 
 </html>
+git remote add origin https://github.com/Sindhu-Bharathi-PG/WebTech-LAB.git
+git branch -M main
+git push -u origin main
