--- a/experiment.html
+++ b/experiment.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Experiments</title>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -49,7 +53,7 @@
         <ul class="list-group">
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 Experiment 1: Learning HTML Tags
-                <button class="btn btn-primary btn-sm" onclick="location.href='home.html'">View</button>
+                <button class="btn btn-primary btn-sm" onclick="location.href='exp1.html'">View</button>
             </li>
            <!--  <li class="list-group-item d-flex justify-content-between align-items-center">
                 Experiment 2: CSS Styling
