--- a/exp1.html
+++ b/exp1.html
@@ -21,7 +21,7 @@
             color: white;
             justify-content: center;
             align-items: center;
-            display:flex;
+            display: flex;
         }
 
         pre {
@@ -59,7 +59,7 @@
     <section class="scroll-bg">
 
         <div class="container my-5">
-            <h1 class="mb-4 text-dark text-center fw-bold">Learn HTML Tags</h1>
+            <h1 class="mb-4 text-light text-center fw-bold">Learn HTML Tags</h1>
             <p class="lead text-center mb-5 fw-bold">Understand how different HTML tags work with examples and their
                 rendered
                 output.</p>
@@ -176,15 +176,19 @@
                 <div class="col-md-6">
                     <div class="card shadow-sm">
                         <div class="card-body">
-                            <h5 class="card-title ">&lt;embed&gt; Embed</h5>
-                            <pre>&lt;embed src="sample.mp3" width="150" height="100"&gt;</pre>
-                            <div class="output-box">
-                                <embed src="assets/sample.mp3" width="400" height="100" class="mb-5 px-3">
-                                <div class="text-muted small">(No audio will play unless a valid file is used.)</div>
+                            <h5 class="card-title">&lt;audio&gt; Embed</h5>
+                            <pre>&lt;audio controls&gt;&lt;source src="sample.mp3" type="audio/mpeg"&gt;&lt;/audio&gt;</pre>
+                            <div class="output-box mb-3">
+                                <audio controls class="w-100 px-3">
+                                    <source src="assets/sample.mp3" type="audio/mpeg">
+                                    Your browser does not support the audio element.
+                                </audio>
+                                <div class="text-muted small">(Audio plays only when user clicks play.)</div>
                             </div>
                         </div>
                     </div>
                 </div>
+
 
                 <!-- Font (Deprecated) -->
                 <div class="col-md-6">
@@ -888,8 +892,11 @@ width="100%"&gt;
 
 
             </div>
-            <button class=" btn btn-dark shadow btn-outline-light mt-5 rounded-circle py-3 "
-                onclick="location.href='exp1.html'">Go Up</button>
+            <div class="d-flex justify-content-center align-items-center mt-5">
+                <button class="btn btn-info btn-lg shadow rounded-pill px-5 py-3" onclick="location.href='exp1.html'">
+                    <i class="fas fa-arrow-up mr-2"></i> Completed Successfully!!!
+                </button>
+            </div>
 
     </section>
 
@@ -899,5 +906,3 @@ width="100%"&gt;
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-</html>
