--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
     <div class="bg-primary py-4 rounded-3 shadow-sm d-flex justify-content-center align-items-center gap-3 mt-2">
         <i class="bi bi-laptop fs-1 text-white"></i>
         <p class="fs-2 text-white mb-0" style="font-family: 'Poppins', sans-serif;">
-            Introduction to Web Technology
+            Web Technology and Computer Networks LAB
         </p>
     </div>
 
