Update: your message here

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: rgb(232, 231, 226);
             font-family: 'Segoe UI', sans-serif;
         }
 
