--- a/exp1.html
+++ b/exp1.html
@@ -13,6 +13,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: rgb(232, 231, 226);
+
+        }
+
         .card-title {
             background-color: black;
             margin: 2px;
@@ -38,28 +44,100 @@
             border-radius: 5px;
         }
 
+
+
+        html {
+            scroll-behavior: smooth;
+        }
+
         .scroll-bg {
-            background-image: url('assets/bg.webp');
+            position: relative;
+            background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1470&q=80');
             background-attachment: fixed;
             background-size: cover;
             background-position: center;
             min-height: 100vh;
             color: white;
             display: flex;
-            padding: 4rem;
+            padding: 4rem 2rem;
         }
 
-        html {
-            scroll-behavior: smooth;
+        .scroll-bg::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background-color: rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(4px);
+            z-index: 0;
         }
+
+        .scroll-bg>.container {
+            position: relative;
+            z-index: 1;
+        }
+          .navbar {
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      animation: fadeInDown 0.6s ease-out;
+    }
+
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Brand hover animation */
+    .navbar-brand {
+      font-weight: 600;
+      transition: transform 0.3s ease;
+    }
+
+    .navbar-brand:hover {
+      transform: scale(1.05) rotate(-2deg);
+    }
+
+    /* Animated underline for nav links */
+    .nav-link {
+      position: relative;
+      transition: color 0.3s ease;
+    }
+
+    .nav-link::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      left: 0;
+      bottom: 0;
+      background-color: orange;
+      transition: width 0.3s ease;
+    }
+
+    .nav-link:hover::after,
+    .nav-link.active::after {
+      width: 100%;
+    }
+
+    .nav-link:hover {
+      color: orange;
+    }
     </style>
 </head>
 
 <body>
     <section class="scroll-bg">
 
-        <div class="container my-5">
-            <h1 class="mb-4 text-light text-center fw-bold">Learn HTML Tags</h1>
+        <div class="container mb-5">
+            <button onclick="history.back()" class="btn btn-dark">
+                ← Back
+            </button>
+
+            <h1 class="mb-4 text-light text-center fw-bold">HTML Tags</h1>
             <p class="lead text-center mb-5 fw-bold">Understand how different HTML tags work with examples and their
                 rendered
                 output.</p>
@@ -892,7 +970,8 @@ width="100%"&gt;
 
             </div>
             <div class="d-flex justify-content-center align-items-center mt-5">
-                <button class="btn btn-info btn-lg shadow rounded-pill px-5 py-3" onclick="location.href='exp1.html'">
+                <button class="btn btn-info btn-lg shadow rounded-pill px-5 py-3"
+                    onclick="location.href='experiment.html'">
                     <i class="fas fa-arrow-up mr-2"></i> Completed Successfully!!!
                 </button>
             </div>
