--- a/experiment.html
+++ b/experiment.html
@@ -5,12 +5,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Experiments</title>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
 </head>
+<style>
+    body {
+        font-family: 'Poppins', sans-serif;
+        background-color: rgb(232, 231, 226);
+
+    }
+      .navbar {
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      animation: fadeInDown 0.6s ease-out;
+    }
+
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Brand hover animation */
+    .navbar-brand {
+      font-weight: 600;
+      transition: transform 0.3s ease;
+    }
+
+    .navbar-brand:hover {
+      transform: scale(1.05) rotate(-2deg);
+    }
+
+    /* Animated underline for nav links */
+    .nav-link {
+      position: relative;
+      transition: color 0.3s ease;
+    }
+
+    .nav-link::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      left: 0;
+      bottom: 0;
+      background-color: orange;
+      transition: width 0.3s ease;
+    }
+
+    .nav-link:hover::after,
+    .nav-link.active::after {
+      width: 100%;
+    }
+
+    .nav-link:hover {
+      color: orange;
+    }
+</style>
 
 <body>
     <div class="bg-primary py-4 rounded-3 shadow-sm d-flex justify-content-center align-items-center gap-3 mt-2">
@@ -31,6 +89,9 @@
             <div class="collapse navbar-collapse" id="navbarMenu">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
+                        <a class="nav-link" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="experiment.html">Experiments</a>
                     </li>
                     <li class="nav-item">
@@ -39,9 +100,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Me</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="explore.html">Explore</a>
-                    </li>
+
                 </ul>
             </div>
         </div>
@@ -55,7 +114,7 @@
                 Experiment 1: Learning HTML Tags
                 <button class="btn btn-primary btn-sm" onclick="location.href='exp1.html'">View</button>
             </li>
-           <!--  <li class="list-group-item d-flex justify-content-between align-items-center">
+            <!--  <li class="list-group-item d-flex justify-content-between align-items-center">
                 Experiment 2: CSS Styling
                 <button class="btn btn-primary btn-sm">View</button>
             </li>
@@ -69,7 +128,7 @@
             </li> -->
         </ul>
     </div>
-
+    <div class="py-5 bg-dark "></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
