--- a/index.html
+++ b/index.html
@@ -1,84 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Introduction to Web Technology</title>
+  <title>Introduction to Web Technology & Computer Networks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap 5 CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body, html {
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
+
+    html,
+    body {
       height: 100%;
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
+      background: #191c24;
       overflow: hidden;
     }
 
     .bg-animated {
-      background: linear-gradient(-45deg, #00c9ff, #92fe9d, #fbc2eb, #a18cd1);
-      background-size: 400% 400%;
-      animation: gradientMove 10s ease infinite;
-      height: 100vh;
+      min-height: 100vh;
+      min-width: 100vw;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
+      position: relative;
+      color: #f5f6fa;
+      background: radial-gradient(ellipse at top left, #369dfa 0%, #334866 60%, #191c24 100%);
+      animation: gradientMove 12s linear infinite alternate;
       text-align: center;
-      color: white;
-      flex-direction: column;
     }
 
     @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+      0% {
+        background-position: 0% 0%;
+      }
+
+      100% {
+        background-position: 100% 100%;
+      }
     }
 
     .fade-in {
-      animation: fadeIn 2s ease-in-out;
+      opacity: 0;
+      animation: fadeInUp 2s ease forwards;
     }
 
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
+    .fade-in:nth-child(2) {
+      animation-delay: 0.5s;
+    }
+
+    .fade-in:nth-child(3) {
+      animation-delay: 1.1s;
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     h1 {
-      font-size: 3.5rem;
-      font-weight: bold;
-      text-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+      font-size: 2.7rem;
+      font-weight: 700;
+      letter-spacing: 1px;
+      margin-bottom: 1.1rem;
+      text-shadow: 0 2px 18px #1a5abcf2;
     }
 
-    p {
-      font-size: 1.5rem;
-      margin-top: 1rem;
+    .subtitle {
+      font-size: 1.15rem;
+      font-weight: 400;
+      color: #b2becd;
+      margin-bottom: 2.5rem;
+      margin-top: -0.5rem;
+      line-height: 1.6;
     }
 
-    .glow-button {
-      margin-top: 2rem;
-      padding: 12px 30px;
-      font-size: 1.2rem;
-      font-weight: 500;
+    .btn-professional {
+      padding: 0.9rem 2.4rem;
+      font-size: 1.08rem;
+      font-weight: 600;
+      border-radius: 40px;
+      background: linear-gradient(90deg, #2193b0 0, #6dd5ed 100%);
+      color: #1d263b;
       border: none;
-      border-radius: 50px;
-      background: white;
-      color: #4a00e0;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
-      transition: all 0.3s ease-in-out;
+      box-shadow: 0 6px 24px rgba(55, 154, 237, 0.18);
+      transition: all 0.23s cubic-bezier(.45, 1.15, .68, 1.09);
+      text-decoration: none;
+      letter-spacing: .5px;
     }
 
-    .glow-button:hover {
-      box-shadow: 0 0 40px rgba(255, 255, 255, 0.8);
-      transform: scale(1.05);
-      color: #fff;
-      background: #4a00e0;
+    .btn-professional:focus {
+      outline: 2px solid #114174;
+      outline-offset: 2px;
+    }
+
+    .btn-professional:hover {
+      background: linear-gradient(90deg, #174674 0, #2c5364 100%);
+      color: #f5f6fa;
+      box-shadow: 0 10px 28px rgba(33, 147, 176, 0.22);
+      transform: translateY(-3px) scale(1.04);
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      .subtitle {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
+
 <body>
-  <div class="bg-animated">
-    <h1 class="fade-in">Introduction to Web Technology & Computer Networks</h1>
-    <p class="fade-in">Explore the world of HTML, CSS, JS, and more...</p>
-    <a href="home.html" class="glow-button fade-in">Start Learning</a>
-  </div>
+  <main class="bg-animated">
+    <h1 class="fade-in">Web Technology & Computer Networks</h1>
+    <p class="subtitle fade-in">
+      Build your foundation in HTML, CSS, JavaScript & Networking Principles. <br>
+      Curated resources for students, professionals, and enthusiasts.
+    </p>
+    <a href="home.html" class="btn btn-professional fade-in" role="button" aria-label="Start Learning Web Technology">
+      Start Learning
+    </a>
+  </main>
 </body>
+
 </html>
