--- a/syllabus.html
+++ b/syllabus.html
@@ -13,6 +13,66 @@
 
 
 </head>
+<STYLE>
+    body {
+        font-family: 'Poppins', sans-serif;
+        background-color: rgb(232, 231, 226);
+
+    }
+
+    .navbar {
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        animation: fadeInDown 0.6s ease-out;
+    }
+
+    @keyframes fadeInDown {
+        from {
+            opacity: 0;
+            transform: translateY(-20px);
+        }
+
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    /* Brand hover animation */
+    .navbar-brand {
+        font-weight: 600;
+        transition: transform 0.3s ease;
+    }
+
+    .navbar-brand:hover {
+        transform: scale(1.05) rotate(-2deg);
+    }
+
+    /* Animated underline for nav links */
+    .nav-link {
+        position: relative;
+        transition: color 0.3s ease;
+    }
+
+    .nav-link::after {
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 2px;
+        left: 0;
+        bottom: 0;
+        background-color: orange;
+        transition: width 0.3s ease;
+    }
+
+    .nav-link:hover::after,
+    .nav-link.active::after {
+        width: 100%;
+    }
+
+    .nav-link:hover {
+        color: orange;
+    }
+</STYLE>
 
 <body>
     <div class="bg-primary py-4 rounded-3 shadow-sm d-flex justify-content-center align-items-center gap-3 mt-2">
@@ -34,6 +94,9 @@
             <div class="collapse navbar-collapse" id="navbarMenu">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
+                        <a class="nav-link" href="home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="experiment.html">Experiments</a>
                     </li>
                     <li class="nav-item">
@@ -42,19 +105,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Me</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="explore.html">Explore</a>
-                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <div class="align-items-center justify-content-center d-flex mt-2">
         <header class="mb-4">
             <img src="assets/logo.png" alt="Your Logo" width="150" height="150">
         </header>
-          
-        </div>
+
+    </div>
     <div class="fs-4 justify-content-center align-items-center d-flex text-decoration-underline"> CSSC 513:
         PRACTICAL V - WEB TECHNOLOGY AND COMPUTER NETWORKS LAB</div>
     <div class="container my-5">
@@ -63,47 +124,62 @@
         </h3>
 
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center"
+                style="background-color: rgb(232, 231, 226);">
                 1. To Create a simple webpage using HTML that includes all tags.
             </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center"
+                style="background-color: rgb(232, 231, 226);">
                 2. Applying Style to an HTML Page Using CSS.
             </li>
             <ul class="list-group">
-                <li class="list-group-item d-flex justify-content-between align-items-center">
+                <li class="list-group-item d-flex justify-content-between align-items-center"
+                    style="background-color: rgb(232, 231, 226);">
                     3. Client-Side Programming
                 </li>
-                <ul class="list-group ms-4">
-                    <li class="list-group-item">a. JavaScript for displaying and comparing dates.</li>
-                    <li class="list-group-item">b. Form validation including text fields, radio buttons, checkboxes,
+                <ul class="list-group ms-4" style="background-color: rgb(232, 231, 226);">
+                    <li class="list-group-item" style="background-color: rgb(232, 231, 226);">a. JavaScript for
+                        displaying and comparing dates.</li>
+                    <li class="list-group-item" style="background-color: rgb(232, 231, 226);">b. Form validation
+                        including text fields, radio buttons, checkboxes,
                         list box, and other controls.</li>
                 </ul>
             </ul>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center"
+                style="background-color: rgb(232, 231, 226);">
                 4. Online Applications using PHP
             </li>
 
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center"
+                style="background-color: rgb(232, 231, 226);">
                 5. Online Application with data access.
             </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center"
+                style="background-color: rgb(232, 231, 226);">
                 6. Implement bus, star, mesh and ring topology.
             </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center"
+                style="background-color: rgb(232, 231, 226);">
                 7. Configure WAN network
             </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center"
+                style="background-color: rgb(232, 231, 226);">
                 8. Dynamic NAT Configuration
             </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center"
+                style="background-color: rgb(232, 231, 226);">
                 9. Configure port Security
             </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
+            <li class="list-group-item d-flex justify-content-between align-items-center"
+                style="background-color: rgb(232, 231, 226);">
                 10. Configure firewall and analyze it.
             </li>
         </ul>
 
     </div>
+    <footer>
+    <div class="py-5 bg-dark"></div>
+</footer>
 </body>
 
 </html>
